2015-08-12  Jacob Fenton  <bocajnotnef@gmail.com>

   * doc/dev/{codebase-guide,coding-guidelines-and-review,development,
   for-khmer-developers,getting-started,release,scripts-and-sandbox,
   binary-file-formats}.rst,doc/{index,introduction,whats-new-2.0,
   contributors}.rst,doc/user/{blog-posts,choosing-table-sizes,galaxy,
   getting-help,guide,install,known-issues,partitioning-big-data,
   scripts}.rst,CITATION: Cleaned up documentation
   * scripts/*.py, khmer/khmer_args.py: added epilog sanitation
   * scripts/{load-into-counting,load-graph,load-into-countgraph,
   load-into-nodegraph}.py, tests/{test_scripts,test_normalize_by_median,
   test_streaming_io,test_countgraph}: renamed load-into-counting -> 
   load-into-countgraph, load-graph -> load-into-nodegraph, fixed tests to not
   bork

2015-08-12  Luiz Irber  <khmer@luizirber.org>

   * khmer/_khmer.cc: Fix a GCC string initialization warning.

2015-08-12  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * CITATION, doc/{index,introduction,user/scripts}.rst, khmer/khmer_args.py:
   formatting fixes and new citation for the software as a whole
   * Makefile: PDF building hints, tweaked dependencies, update coverity URL,
   new target to generate author list for the paper citation 
   * sort-authors-list.py: helper script for the above
   * doc/conf.py: don't generate a module index
   * doc/contributors.rst: formatting, remove references to old lab
   * doc/dev/coding-guidelines-and-review.rst: add C++ version standard
   * doc/dev/getting-started.rst: ccache, git-merge-changelog, and advanced
   commit squashing
   * doc/user/biblio.rst: added links to khmer citation collections
   * doc/user/examples.rst: linked to online version of example scripts
   * doc/user/guide.rst: commented out empty section, added BSD note
   * lib/counting.{cc},lib/*.hh: c++11 fixes: remove unneeded trailing
   semicolons
   * scripts/*.py: line-wrap & scrub output
   * setup.py: turn optimizations back on and -pedantic